# video-generator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md
docs/design/: ceo-plan.md  product-design.md  test-plan.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/channels/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  table.tsx
scripts/: add_channel.py  run.sh  setup.sh
src/: main.py  scheduler.py
src/api/: app.py  base.py  factory.py  models.py
src/api/image/: siliconflow.py
src/api/llm/: siliconflow.py
src/api/routes/: __init__.py  channels.py  system.py  templates.py  videos.py
src/api/tts/: siliconflow.py
src/config/: settings.py
src/core/: models.py  pipeline.py
src/stages/: analyzer.py  artist.py  director.py  fetcher.py  parser.py  renderer.py  voice.py  watcher.py  writer.py
src/storage/: __init__.py  checkpoint.py  database.py  file_store.py  repositories.py
src/templates/: manager.py  presets.py
src/utils/: async_helpers.py  retry.py  validators.py
templates/: chinese-documentary.yaml  chinese-fun.yaml  dramatic.yaml  educational.yaml  humorous.yaml
tests/: conftest.py
tests/unit/: test_analyzer.py  test_artist.py  test_database.py  test_director.py  test_factory.py  test_fetcher.py  test_models.py  test_parser.py  test_pipeline.py  test_renderer.py  test_siliconflow_image.py  test_siliconflow_llm.py  test_siliconflow_tts.py  test_voice.py  test_watcher.py  test_writer.py
