[project]
name = "video-generator"
version = "0.1.0"
description = "YouTube content repurposing pipeline - automated video generation from subtitles"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # YouTube & Subtitles
    "pytube>=15.0",
    "youtube-transcript-api>=0.6",
    "google-api-python-client>=2.0",

    # AI/ML
    "openai>=1.0",
    "anthropic>=0.18",
    "replicate>=0.22",

    # Video Processing
    "moviepy>=1.0",
    "pillow>=10.0",

    # TTS
    "elevenlabs>=0.2",
    "pyttsx3>=2.9",

    # Data Processing
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Async/HTTP
    "aiohttp>=3.9",
    "aiofiles>=23.0",

    # Storage
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",  # PostgreSQL async driver

    # Web API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0",

    # Background Tasks
    "apscheduler>=3.10",

    # Tools
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.scripts]
video-generator = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
